Show Suggestion list with PopupWindow instead of RecyclerView     - add avatar image view to the suggestion list     - change suggestion model     - update androdi support libraries     - add Glide to the project to load avatar image     - add de.hdodenhof:circleimageview to show avatar imageview in circle shape
 Future works :
    - add attrs to customizatoin edit text and suggestion list views

--- a/mentionableedittext/src/main/res/layout/mentionabl_edit_text.xml
+++ b/mentionableedittext/src/main/res/layout/mentionabl_edit_text.xml
@@ -2,28 +2,18 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginLeft="16dp"
-    android:layout_marginRight="16dp"
     android:orientation="vertical">
 
     <com.farshid.mentionableedittext.view.widget.CustomEditText
         android:id="@+id/met"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp" />
-
-    <android.support.v7.widget.CardView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="4dp">
-
-    </android.support.v7.widget.CardView>
-
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/rvSuggestionList"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/met"
-        android:layout_centerHorizontal="true" />
+        android:gravity="bottom"
+        android:paddingTop="14dp"
+        android:paddingLeft="8dp"
+        android:paddingRight="8dp"
+        android:paddingBottom="6dp"
+        android:textSize="14sp"
+        android:background="@drawable/solid_edit_text"/>
 
 </RelativeLayout>
